--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,9 @@
 /.next/
 /out/
 
-# production
-/build
 
-# misc
+# Documentation
+docs/
 .DS_Store
 *.pem
 
@@ -32,6 +31,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
@@ -39,3 +39,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
