--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.43",
+    "@ai-sdk/openai": "^2.0.72",
     "@heroui/react": "^2.8.5",
     "@octokit/graphql": "^9.0.3",
     "@octokit/rest": "^22.0.1",
+    "ai": "^5.0.102",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "fs-extra": "^11.3.2",
     "next": "16.0.4",
