--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/snoowrap": "^1.16.1",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "playwright": "^1.56.1",
