feat: Implement SEO with sitemap and robots, update AI model to gemini-2.5-pro, add AI Studio button to prompt cards, and configure browserslist.

--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not dead"
+  ]
 }
