--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "octokit": "^5.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "rss-parser": "^3.13.0",
     "snoowrap": "^1.23.0",
     "tailwind-merge": "^3.4.0",
