--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "fs-extra": "^11.3.2",
+    "fuse.js": "^7.1.0",
     "next": "16.0.7",
     "octokit": "^5.0.5",
     "react": "19.2.0",
