--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.43",
     "@ai-sdk/openai": "^2.0.72",
+    "@azure-rest/ai-inference": "^1.0.0-beta.6",
+    "@azure/core-auth": "^1.10.1",
     "@google/generative-ai": "^0.24.1",
     "@heroui/react": "^2.8.5",
     "@octokit/graphql": "^9.0.3",
