--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fuse.js": "^7.1.0",
     "next": "16.0.7",
     "octokit": "^5.0.5",
+    "p-limit": "^7.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
