feat: add X auto-discovery scraper using Google Custom Search + FxTwitter API
- Automatically discovers tweet URLs via Google search
- Fetches details via FxTwitter API (no Playwright needed)
- Added 26 new prompts from Twitter
- Includes prompts from MKBHD, Justine Moore, etc.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "audit:apply": "bun src/scripts/audit-apply.ts",
     "scrape:reddit": "bun src/scripts/scraper/reddit-scraper.ts",
     "scrape:x:fast": "bun src/scripts/scraper/x-fxtwitter-scraper.ts",
+    "scrape:x:discover": "bun src/scripts/scraper/x-auto-discover.ts",
     "report": "bun src/scripts/report.ts"
   },
   "dependencies": {
